--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Industrial Manager - Test</title>
+    <title>Industrial Manager - Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body { font-family: 'Segoe UI', sans-serif; margin: 40px; background-color: #f4f4f9; }
         .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 20px; }
@@ -11,9 +12,33 @@
         button:hover { background: #005a9e; }
         table { width: 100%; border-collapse: collapse; margin-top: 10px; }
         th, td { text-align: left; padding: 12px; border-bottom: 1px solid #ddd; }
+        
+        /* Layout do Cabeçalho */
+        .header-container { display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 30px; }
+        .search-box { position: relative; width: 300px; margin-top: 10px; }
+        .search-box i { position: absolute; left: 10px; top: 12px; color: #888; }
+        .search-box input { width: 100%; padding: 10px 10px 10px 35px; border: 1px solid #ddd; border-radius: 20px; outline: none; box-sizing: border-box; }
     </style>
 </head>
 <body>
+
+    <div class="header-container">
+        <a href="landing.html" style="text-decoration: none; color: #0078d4; font-weight: bold; display: flex; align-items: center; gap: 8px;">
+            <i class="fas fa-home fa-lg"></i>
+            <span>Home</span>
+        </a>
+
+        <div style="display: flex; flex-direction: column; align-items: flex-end;">
+            <a href="#" onclick="logout()" style="text-decoration: none; color: #d9534f; font-weight: bold; font-size: 0.9rem;">
+                <i class="fas fa-sign-out-alt"></i> Logout
+            </a>
+            <div class="search-box">
+                <i class="fas fa-search"></i>
+                <input type="text" id="searchInput" onkeyup="filterResults()" placeholder="Search products or materials...">
+            </div>
+        </div>
+    </div>
+
     <h1>Industrial Inventory System</h1>
 
     <div class="card">
@@ -44,6 +69,26 @@
     <script>
         const API = "http://localhost:5008/api";
 
+        // Proteção de Rota
+        if (localStorage.getItem('isAuthenticated') !== 'true') {
+            window.location.href = 'login.html';
+        }
+
+        function logout() {
+            localStorage.removeItem('isAuthenticated');
+            window.location.href = 'login.html';
+        }
+
+        function filterResults() {
+            let input = document.getElementById('searchInput').value.toLowerCase();
+            let cards = document.querySelectorAll('.card'); 
+            cards.forEach(card => {
+                let text = card.innerText.toLowerCase();
+                card.style.display = text.includes(input) ? "block" : "none";
+            });
+        }
+
+        // Funções de Comunicação com o Back-end
         async function addMaterial() {
             const data = { name: document.getElementById('mName').value, stockQuantity: parseFloat(document.getElementById('mStock').value) };
             await fetch(`${API}/rawmaterials`, { method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify(data) });
