--- a/landing.html
+++ b/landing.html
@@ -36,7 +36,7 @@
 
     <nav>
         <h1><i class="fas fa-industry"></i> IndustrialManager</h1>
-        <a href="index.html" class="btn-main">Access System</a>
+        <a href="login.html" class="btn-main">Access System</a>
     </nav>
 
     <section class="hero">
@@ -66,7 +66,7 @@
     <div class="app-link">
         <h2>Ready to start?</h2>
         <p>Explore the full potential of our management API.</p><br>
-        <a href="index.html" class="btn-main" style="padding: 20px 50px; font-size: 1.2rem;">Launch Application</a>
+        <a href="register_user.html" style="display:block; margin-top:10px; font-size:0.8rem; color:#666; text-decoration:none;">Don't have an account? Register here</a>
     </div>
 
     <footer>
